--- a/src/SdtdServerKit/Config/locales/en/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/en/functionsettings.json
@@ -37,7 +37,8 @@
     "IsEnablePlayerInitialSpawnPoint": false,
     "PlayerInitialPosition": null,
     "EnableAutoZombieCleanup": false,
-    "AutoZombieCleanupThreshold": 128
+    "AutoZombieCleanupThreshold": 128,
+    "EnableXmlsSecondaryOverwrite": false
   },
   "GameNoticeSettings": {
     "IsEnabled": false,
