--- a/src/SdtdServerKit/Config/locales/ja/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/ja/functionsettings.json
@@ -32,7 +32,7 @@
         "[FF0000]再起動しています..."
       ]
     },
-    "BlockFamilySharingAccount": true,
+    "BlockFamilySharingAccount": false,
     "RemoveSleepingBagFromPOI": false,
     "IsEnablePlayerInitialSpawnPoint": false,
     "PlayerInitialPosition": null,
