--- a/src/SdtdServerKit/Config/locales/ko/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/ko/functionsettings.json
@@ -32,7 +32,7 @@
         "[FF0000]다시 시작하는 중..."
       ]
     },
-    "BlockFamilySharingAccount": true,
+    "BlockFamilySharingAccount": false,
     "RemoveSleepingBagFromPOI": false,
     "IsEnablePlayerInitialSpawnPoint": false,
     "PlayerInitialPosition": null,
