--- a/src/SdtdServerKit/Config/locales/en/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/en/functionsettings.json
@@ -137,5 +137,12 @@
     "HasClaimedTip": "[00FF00]You have received the gift package~",
     "NonVipTip": "[00FF00]You are not a VIP yet~",
     "ClaimSuccessTip": "[00FF00]Congratulations on successfully receiving the gift package: {GiftName}"
+  },
+  "ColoredChat": {
+    "IsEnabled": false,
+    "GlobalDefault": "FFFFFF",
+    "WhisperDefault": "D00000",
+    "FriendsDefault": "00BB00",
+    "PartyDefault": "FFCC00"
   }
 }
