--- a/src/SdtdServerKit/Config/locales/en/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/en/functionsettings.json
@@ -138,6 +138,13 @@
     "NonVipTip": "[00FF00]You are not a VIP yet~",
     "ClaimSuccessTip": "[00FF00]Congratulations on successfully receiving the gift package: {GiftName}"
   },
+  "CdKeyRedeemSettings": {
+    "IsEnabled": false,
+    "HasAlreadyRedeemedTip": "[00FF00]You have already redeemed the CD key.",
+    "HasReachedMaxRedemptionLimitTip": "[00FF00]You have reached the maximum redemption limit.",
+    "HasRedemptionCodeExpired": "[00FF00]The redemption code has expired.",
+    "RedeemSuccessTip": "[00FF00]Congratulations on successfully redeeming the CD key."
+  },
   "ColoredChatSettings": {
     "IsEnabled": false,
     "GlobalDefault": "FFFFFF",
