Added POI area sleeping bag prompt function and cleaned up useless code
In the `functionsettings.json` file, deleted the `AutoRestart` configuration item, and added the `RemoveSleepingBagFromPoiTip` configuration item to remind players that they cannot place sleeping bags in the POI area.

In the `GlobalSettings.cs` file, added the `RemoveSleepingBagFromPoiTip` property to get or set the prompt information for removing sleeping bags in the POI area.

In the `GlobalSettings.cs` file, deleted some unnecessary `using` statements.

In the `GameManagerPatcher.cs` file, added the function of sending prompt information to players when detecting the placement of sleeping bags in the POI area.

--- a/src/SdtdServerKit/Config/locales/en/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/en/functionsettings.json
@@ -21,19 +21,9 @@
         "ty-cpp {EntityId} -1"
       ]
     },
-    "AutoRestart": {
-      "IsEnabled": false,
-      "RestartHour": 4,
-      "RestartMinute": 0,
-      "Messages": [
-        "[00FF00]The server will reboot in 3 seconds...",
-        "[00FF00]The server will reboot in 2 seconds...",
-        "[00FF00]The server will reboot in 1 second...",
-        "[FF0000]Restarting..."
-      ]
-    },
     "BlockFamilySharingAccount": false,
     "RemoveSleepingBagFromPOI": false,
+    "RemoveSleepingBagFromPoiTip": "You can't place land claim or sleeping bag in POI area.",
     "IsEnablePlayerInitialSpawnPoint": false,
     "PlayerInitialPosition": null,
     "EnableAutoZombieCleanup": false,
