Added configuration items and related logic for hiding chat commands
In the `functionsettings.json` file, added a new configuration item `"HideCommandInChat": false` to control whether to hide commands in chat.

In the `GlobalSettings.cs` file, added a new property `HideCommandInChat` to get or set whether to hide commands in chat.

In the `ModEventHub.cs` file, modified the `OnChatMessage` method:
- Removed the check for the `ChatMessage` event being null.
- Added a null value check when calling `ChatMessage.Invoke(chatMessage)`.
- Added a new logic judgment, if the `HideCommandInChat` configuration item is `true` and the message starts with the configured command prefix, return `false` to prevent the message from being displayed in the chat.

--- a/src/SdtdServerKit/Config/locales/en/functionsettings.json
+++ b/src/SdtdServerKit/Config/locales/en/functionsettings.json
@@ -28,7 +28,8 @@
     "PlayerInitialPosition": null,
     "EnableAutoZombieCleanup": false,
     "AutoZombieCleanupThreshold": 128,
-    "EnableXmlsSecondaryOverwrite": false
+    "EnableXmlsSecondaryOverwrite": false,
+    "HideCommandInChat": false
   },
   "GameNoticeSettings": {
     "IsEnabled": false,
