Updated server settings description

--- a/src/SdtdServerKit/Config/locales/zh/serversettings.json
+++ b/src/SdtdServerKit/Config/locales/zh/serversettings.json
@@ -229,7 +229,7 @@
   },
   "MaxSpawnedAnimals": {
     "Group": "性能相关",
-    "Desc": "最大刷新丧尸数量。如果您的服务器上有大量玩家, 您可以增加这一限制来添加更多野生动物。动物不会像僵尸那样消耗大量 CPU。注意：这不会导致任意生成更多动物：生物群落产卵系统只会在给定区域内产卵一定数量的动物, 但如果您的玩家数量很多, 而且分布很分散, 那么您可能会遇到限制, 因此可以增加该限制"
+    "Desc": "最大刷新动物数量。如果您的服务器上有大量玩家, 您可以增加这一限制来添加更多野生动物。动物不会像僵尸那样消耗大量 CPU。注意：这不会导致任意生成更多动物：生物群落产卵系统只会在给定区域内产卵一定数量的动物, 但如果您的玩家数量很多, 而且分布很分散, 那么您可能会遇到限制, 因此可以增加该限制"
   },
   "ServerMaxAllowedViewDistance": {
     "Group": "性能相关",
